--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -10,7 +10,7 @@
             <h4 class="wow fadeInUp" data-wow-delay=".2s">Bienvenue sur votre espace d'inscription</h4>
 
             <div class="buttons">
-              <a href="login.html" rel="nofollow" class="button button-lg radius-10 wow fadeInUp" data-wow-delay=".7s">Inscrivez-vous maintenant</a>
+              <a [routerLink]="['/register']"  rel="nofollow" class="button button-lg radius-10 wow fadeInUp" data-wow-delay=".7s">Inscrivez-vous maintenant</a>
             </div>
           </div>
         </div>
