implementation layout admin et form inscrription en cours

--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -41,7 +41,7 @@
                 </div>
               </div>
               <div>&nbsp;</div>
-              <a href="register.html">Pas de compte? Creer un compte</a>
+              <a href="register">Pas de compte? Creer un compte</a>
             </div>
           </form>
         </div>
