--- a/src/app/admin/admin-header/admin-header.component.html
+++ b/src/app/admin/admin-header/admin-header.component.html
@@ -29,7 +29,7 @@
   
                   <ul class="nav side-menu">
                     <li>
-                      <a href="index.html"><i class="fa fa-home"></i> Accueil </a>
+                      <a routerLink="dashbord"><i class="fa fa-home"></i> Accueil </a>
                     </li>
   
                     <li>
